starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__tests__block.snap
---
source: starstream-compiler/src/parser/expression/primary/mod.rs
description: "Code:\n\n{ let mut a = 1; a = a + 1; }\n"
---
Spanned {
    node: Block(
        Block {
            statements: [
                Spanned {
                    node: VariableDeclaration {
                        public: false,
                        mutable: true,
                        pattern: Name(
                            [
                                Identifier {
                                    name: "a",
                                    span: 10..11,
                                },
                            ],
                        ),
                        ty: None,
                        value: Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "1",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 14..15,
                        },
                        else_branch: None,
                    },
                    span: 2..17,
                },
                Spanned {
                    node: Assignment {
                        target: Identifier {
                            name: "a",
                            span: 17..18,
                        },
                        value: Spanned {
                            node: Binary {
                                op: Add,
                                left: Spanned {
                                    node: ScopedName(
                                        [
                                            Identifier {
                                                name: "a",
                                                span: 21..22,
                                            },
                                        ],
                                    ),
                                    span: 21..23,
                                },
                                right: Spanned {
                                    node: Literal(
                                        Integer(
                                            IntegerLiteral {
                                                digits: "1",
                                                radix: Decimal,
                                            },
                                        ),
                                    ),
                                    span: 25..26,
                                },
                            },
                            span: 21..26,
                        },
                    },
                    span: 17..28,
                },
            ],
            tail_expression: None,
            span: 0..30,
        },
    ),
    span: 0..30,
}
