starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__tests__enum_constructor_unit.snap
---
source: starstream-compiler/src/parser/expression/primary/mod.rs
description: "Code:\n\nOption::None"
---
Spanned {
    node: ScopedName(
        [
            Identifier {
                name: "Option",
                span: 0..6,
            },
            Identifier {
                name: "None",
                span: 8..12,
            },
        ],
    ),
    span: 0..12,
}
