starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__tests__grouping.snap
---
source: starstream-compiler/src/parser/expression/primary/mod.rs
description: "Code:\n\n(1 + 2)"
---
Spanned {
    node: Grouping(
        Spanned {
            node: Binary {
                op: Add,
                left: Spanned {
                    node: Literal(
                        Integer(
                            IntegerLiteral {
                                digits: "1",
                                radix: Decimal,
                            },
                        ),
                    ),
                    span: 1..2,
                },
                right: Spanned {
                    node: Literal(
                        Integer(
                            IntegerLiteral {
                                digits: "2",
                                radix: Decimal,
                            },
                        ),
                    ),
                    span: 5..6,
                },
            },
            span: 1..6,
        },
    ),
    span: 0..7,
}
