starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__tests__nested_tuple_expression.snap
---
source: starstream-compiler/src/parser/expression/primary/mod.rs
description: "Code:\n\n((1, 2), 3)"
---
Spanned {
    node: Tuple(
        [
            Spanned {
                node: Tuple(
                    [
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "1",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 2..3,
                        },
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "2",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 5..6,
                        },
                    ],
                ),
                span: 1..7,
            },
            Spanned {
                node: Literal(
                    Integer(
                        IntegerLiteral {
                            digits: "3",
                            radix: Decimal,
                        },
                    ),
                ),
                span: 9..10,
            },
        ],
    ),
    span: 0..11,
}
