starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__tests__tuple_expression.snap
---
source: starstream-compiler/src/parser/expression/primary/mod.rs
description: "Code:\n\n(1, true)"
---
Spanned {
    node: Tuple(
        [
            Spanned {
                node: Literal(
                    Integer(
                        IntegerLiteral {
                            digits: "1",
                            radix: Decimal,
                        },
                    ),
                ),
                span: 1..2,
            },
            Spanned {
                node: Literal(
                    Boolean(
                        true,
                    ),
                ),
                span: 4..8,
            },
        ],
    ),
    span: 0..9,
}
